--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 
 .font-nunito{
   font-family: 'Nunito', sans-serif;
+  letter-spacing: 1px;
 }
