--- a/src/components/leftnav/leftNav.css
+++ b/src/components/leftnav/leftNav.css
@@ -6,15 +6,23 @@
     border-right: 2px solid #f3f3f3;
     position: relative;
 }
+.leftnav-2{
+    width: 6.5rem;
+    height: 100vh;
+    padding: 2.5rem 0;
+    /* background-color: blue; */
+    border-right: 2px solid #f3f3f3;
+    position: relative;
+    display: hidden;
+}
 .leftnav-icon{
     margin: 0 auto;
 }
 .logo{
-    font-size: 4.5rem;
-    width: fit-content;
-    height: fit-content;
-    line-height: 4rem;
-    font-weight:900;
+    width: 3.5rem;
+    display: block;
+    margin: 0 auto;
+    /* border: 1px solid; */
     
 }
 
@@ -25,6 +33,7 @@
 }
 
 .leftnav-top-menus{
+    margin-top: 5rem;
     display: flex;
     flex-direction: column;
     gap: 2rem;
@@ -57,3 +66,18 @@
     border-radius: 5px;
 
 }
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+
+}
+
+@media screen and (max-width:767px) {
+    .leftnav{
+        display: none;
+    }
+    .leftnav-2{
+        display: block;
+    }
+}
+
+
