--- a/src/components/nav/Nav.css
+++ b/src/components/nav/Nav.css
@@ -1,6 +1,7 @@
 .nav{
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
+    align-items: center;
     padding: 0.7rem 2rem;
     background-color: #fff;
     border-bottom: 2px solid #f3f3f3;
