--- a/src/components/users/users.css
+++ b/src/components/users/users.css
@@ -16,6 +16,9 @@
 .user-table tbody tr:nth-child(odd){
     background-color: #f9fafb;
 }
+.user-table tbody tr:nth-child(odd):hover{
+    background-color: #9dceff;
+}
 
 .user-table td{
     padding: 1.5rem 1rem;
@@ -26,3 +29,57 @@
     padding: 1rem 1rem;
 }
 
+.user{
+    cursor: pointer;
+}
+.user:hover{
+    background-color: #9dceff;
+}
+
+
+
+@media screen and (max-width: 767px) {
+    .users-section{
+        background-color: #fff;
+        /* padding: 1rem; */
+        border-radius: 10px;
+    }
+    
+    .user-table{
+        /* border: 1px solid; */
+        width: 100%;
+        text-align: left;
+        border-collapse: collapse;
+        font-size: 1rem;
+        table-layout: fixed;
+    }
+    
+    
+    
+    .user-table td{
+        padding: 1.5rem 1rem;
+        width: 25%;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+    
+    .user-table-heading th{
+        color: gray;
+        padding: 1rem 1rem;
+        width: 25%;
+        /* overflow: hidden;
+        text-overflow: ellipsis; */
+    }
+
+}
+  
+  /* Media query for tablets */
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .user-table{
+        /* border: 1px solid; */
+        width: 100%;
+        text-align: left;
+        border-collapse: collapse;
+        font-size: 1rem;
+    }
+}
