--- a/src/components/users/users.css
+++ b/src/components/users/users.css
@@ -36,6 +36,17 @@
     background-color: #9dceff;
 }
 
+.userdata p{
+    line-height: 1rem;
+}
+.userdata .modal-heading{
+    color: white;
+    border-radius: 4px;
+    padding: 0 3px;
+    line-height: 2rem;
+    margin-top: 1rem;
+}
+
 
 
 @media screen and (max-width: 767px) {
